test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_hex_const.draco
proc main() void : a := 0x1F; a := 0Xf; corp;

