test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_corp_as_identifier.draco
int corp;
 
proc main() void : a := 1; corp;
